--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,43 +1,133 @@
 // Import Variables
-@import '../utils/variables.scss';
+@import "../utils/variables.scss";
 
 // Hero Section
-.hero {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    height: 100vh;
-
-    .hero-left-container {
-        display: grid;
-        grid-template-rows: repeat(2, 1fr); // Two rows for the left container
-        background-color: yellow;
-
-        .hero-description,
-        .hero-title {
-             padding: 2rem 0;
-        }
-       
+.hero-section {
+    position: relative;
+    .container {
+        max-width: 100%;
     }
-    .hero-right-container {
-        background-color: $gray-light;
-        img {
-            object-fit: cover;
+    .hero {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+
+        .hero-left-container {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+
+            .hero-title-block {
+                background-color: yellow;
+                min-height: 200px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                padding: 2rem;
+            }
+            .hero-description-block {
+                background-color: red;
+                min-height: 200px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                text-align: center;
+                padding: 2rem;
+                gap: 3rem;
+            }
+        }
+        .hero-right-container {
+            background-color: $gray-light;
+            background-image: url("https://img.freepik.com/free-photo/majestic-mountain-peak-tranquil-winter-landscape-generated-by-ai_188544-15662.jpg");
+            height: 400px;
             width: 100%;
-            height: 100%;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center bottom;
+        }
+    }
+
+    @media (min-width: $breakpoint-desktop) {
+        .hero {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(1, 1fr);
+            height: 600px;
+
+            .hero-left-container {
+                .hero-title-block {
+                    width: 150px;
+                    justify-content: flex-start;
+                    text-align: left;
+                    padding: 0;
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        background-color: yellow;
+                        left: 0;
+                        top: 0;
+                        min-height: 300px;
+                        height: 100%;
+                        width: 50vw;
+                        z-index: -1;
+                    }
+                }
+                .hero-description-block {
+                    text-align: left;
+                    padding: 0;
+                    align-items: flex-start;
+                    gap: 4rem;
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        left: 0;
+                        min-height: 300px;
+                        top: 50%;
+                        background-color: red;
+                        height: 100%;
+                        width: 50vw;
+                        z-index: -1;
+                    }
+                }
+            }
+
+            .hero-right-container {
+                height: inherit;
+                width: 50%;
+                position: absolute;
+                right: 0;
+            }
+        }
+    }
+
+    @media (min-width: $breakpoint-desktop) {
+        .container {
+            max-width: $container-max-width-md;
+        }
+    }
+
+    @media (min-width: $breakpoint-desktop-large) {
+        .container {
+            max-width: $container-max-width-lg;
+        }
+    }
+
+    @media (min-width: $breakpoint-desktop-extra-large) {
+        .container {
+            max-width: $container-max-width-xl;
         }
     }
 }
 
 // Devices
 .devices-grid {
-    @include grid-container(2, auto, 2rem);
-    height: 80px;
+    @include grid-container(1, auto, 2rem);
+    height: auto;
     .device-grid-item {
         border: 1px solid $white;
         padding: 1rem;
         color: $white;
-        @include flex-container(row, nowrap, space-between, center); 
+        @include flex-container(row, nowrap, space-between, center);
         .arrow-cta {
             border-radius: 100%;
             background-color: $white;
@@ -51,5 +141,10 @@
             font-weight: bold;
             cursor: pointer;
         }
+    }
+
+    @media (min-width: $breakpoint-desktop) {
+        @include grid-container(2, auto, 2rem);
+        height: 80px;
     }
 }
